--- a/News/View/Base.lproj/LaunchScreen.storyboard
+++ b/News/View/Base.lproj/LaunchScreen.storyboard
@@ -17,16 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="wpI-3b-G9z">
-                                <rect key="frame" x="87" y="353" width="240" height="190"/>
+                                <rect key="frame" x="143.5" y="384.5" width="127" height="127"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="wpI-3b-G9z" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="2ub-bg-RVp"/>
-                            <constraint firstItem="wpI-3b-G9z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="UlR-FF-rcK"/>
-                            <constraint firstItem="wpI-3b-G9z" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="YBT-sa-Pzn"/>
-                            <constraint firstItem="wpI-3b-G9z" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="309" id="xxs-YR-PUC"/>
+                            <constraint firstItem="wpI-3b-G9z" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="UUy-oY-Fw5"/>
+                            <constraint firstItem="wpI-3b-G9z" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="egg-zO-HO3"/>
                         </constraints>
                     </view>
                 </viewController>
